--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,5 @@
 @use '../styles/mixins' as*;
+@use '../styles/variables' as*;
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Merriweather&family=Raleway:ital,wght@1,500&family=Roboto+Condensed:wght@300&family=Roboto:wght@300&display=swap');
 // font-family: 'Lato', sans-serif;
 // font-family: 'Merriweather', serif;
@@ -6,25 +7,23 @@
 // font-family: 'Roboto', sans-serif;
 // font-family: 'Roboto Condensed', sans-serif;
 
-//dark brown #523b35
-//reddish brown #4A2c2a
-//tan1  #cc9966
-//tan2 #c19A6b
+//
 
 * {
-    margin: 0;
+    margin: 0%;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 .nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: #c19A6b;
-    margin: 0%;
+    background-color: $blackBrown;
+
     width: 100%;
-    height: 60px;
+    height: auto;
 
 
     &__logo {
@@ -32,45 +31,53 @@
         font-size: 2em;
         text-decoration: none;
         color: #4A2c2a;
+        margin-top: 3%;
+        margin-left: 5%;
+        
 
     }
 
     &__logo--image {
-        height: 60px;
+        width: 100%;
+        height:115px ;
     }
 }
 
-@include mobile{
+@include mobile {
     .menuItem {
         display: block;
         margin: 2rem 4rem;
         font-size: 1.8rem;
-        color: white;
+        color:$textColor;
         text-decoration: none;
-    
+
     }
-    
+    .menuIcon{
+        color: $textColor;
+    }
     .menuItem:hover {
         text-decoration: underline;
     }
-    
+
     .hamburger {
-        position:static;
+        position: static;
         z-index: 100;
         top: 1rem;
         right: 1rem;
         padding: 4px;
-        border: #c19A6b;
-        background: #c19A6b;
+        border: $blackBrown;
+        background: $blackBrown;
         cursor: pointer;
-    
-    
+
+
     }
-    
+
     .closeIcon {
         display: none;
+        color: $textColor;
+       
     }
-    
+
     .menu {
         position: fixed;
         transform: translateY(-100%);
@@ -80,81 +87,104 @@
         right: 0;
         bottom: 5%;
         z-index: 99;
-        background: #c19A6b;
-        color: white;
+        background: $blackBrown;
+        color:$textColor;
         list-style: none;
         padding-top: 4rem;
-       
+
     }
     
     .showMenu {
         transform: translateY(0);
-        
+
     }
-    
+
 }
+
 .home {
-    background: linear-gradient(#4a2c2a1b,#4A2c2a),
-    url('../images/lady-justice.jpeg');
-    width: auto;
-    height: 500px;
-    background-size: cover;
-    background-repeat: no-repeat;
-;
-   
-    
+
+
+    height: 700px;
+    background-color: $brown;
+
+
+    &__arch {
+        background: $textColor no-repeat padding-box;
+        border-radius: 600px 600px 0px 0px;
+        width: 100%;
+        height: 600px;
+        opacity: 0.72;
+        position: relative;
+        margin: auto;
+        top: 100px
+    }
+
+    &__hero {
+        width: 270px;
+        height: 500px;
+        position: absolute;
+        top: 280px;
+        left: 130px;
+
+    }
+
     &__intro {
         text-align: center;
-        display: flex;
-        flex-direction: column;
+
+
+
     }
 
     &__intro--welcome {
-        padding-top: 30%;
+        position: absolute;
+        top: 330px;
+        left: 5%;
+        text-align: left;
     }
 
     &__intro--header {
         font-family: 'Merriweather', serif;
-        font-size: 2em;
-        width: 95%;
-        margin: auto;
-        color:#ba8648;
-        text-shadow: 5px 2px 2px #2b1a18;
-        
-
+        font-size: 2.8em;
+        width: 60%;
+        color: $textColor2;
     }
 
     &__intro--subheader {
         font-family: "lato";
-        font-size: 1em;
+        font-size: 1.5em;
         font-weight: bold;
         width: 80%;
-        margin: auto;
-        padding-top: 15%;
+        padding-top: 2%;
         margin-bottom: 10%;
-        color: #eadfd2;
+        color: $blackBrown;
     }
 
     &__intro--button {
         margin-top: 5%;
         border-style: none;
         padding: 3%;
-        margin-top: 5%;
         font-family: 'Lato', sans-serif;
         font-weight: bold;
-        border: 2px solid #c19A6b;
-        color: #c19A6b;
-        width: 40%;
-        margin: auto;
+        background: $carmelBrown;
+        color: $textColor;
+        width: 50%;
+        position: absolute;
+        top: 570px;
+        left: 25px;
+
     }
 }
 
 .about {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    background-color: #ddcebc;
+
+    margin-top: 0%;
+    background: linear-gradient(to right,
+            $brown 0%,
+            $brown 50%,
+            $carmelBrown 50%,
+            $carmelBrown 100%);
     padding-bottom: 5%;
+
 
     &__bio {
         text-align: center;
@@ -162,31 +192,28 @@
 
     }
 
-    &__bio--header {
-        color: #4A2c2a;
-        font-family: 'Roboto Condensed', sans-serif;
 
-
-    }
 
     &__bio--paragraph {
-        color: #4A2c2a;
+        color: $textColor;
         font-family: 'Lato', sans-serif;
         width: 90%;
-        text-align: center;
+        text-align: left;
         margin-left: 5%;
+        padding: 5%;
+        font-size: 1.2em;
+        line-height: 1.8em;
 
     }
 
     &__content {
-        margin-left: 30%;
-        margin-top: 10%;
+        margin: auto;
     }
 
     &__content--image {
-        width: 60%;
-        position: relative;
-        border-radius: 2%;
+        width: 100%;
+        height: 300px;
+        margin-top: 20%;
         box-shadow: 0px 2px 5px rgb(100, 53, 2);
     }
 
@@ -212,229 +239,273 @@
     }
 }
 
-.services {
-    text-align: center;
+.quote {
+    height: 250px;
+    background-color: $textColor;
 
-    &__container {
-        display: flex;
-        flex-direction: column;
-        margin-top: 5%;
-    }
-
-    &__service {
-        width: 40%;
-        margin: auto;
-        border: #4a2c2a70 2px solid;
-        margin-bottom: 10%;
-        padding: 2%;
-        border-radius: 5%;
-        background-color: #4A2c2a;
-        box-shadow: 0px 2px 5px rgb(100, 53, 2);
-    }
-
-    &__tittle {
-        font-family: 'Roboto Condensed', sans-serif;
-        font-size: 2em;
-        color: #4A2c2a;
-        margin-top: 5%;
-    }
-
-    &__service--tittle {
-        color: #c19A6b;
+    &__content {
         font-family: 'Merriweather', serif;
-    }
-
-    &__service--description {
-        color: #ddcebc;
-        font-family: 'Lato', serif;
-    }
-
-    &__service--icon {
-        margin-right: 5%;
+        font-size: 1.5em;
+        text-align: center;
+        padding: 10%;
+        color: $carmelBrown;
 
     }
 }
 
+.services {
+    
+    background-color: $brown;
+    margin-top: 0%;
 
-.contact {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    background-color: #4A2c2a;
-    padding: 5%;
 
-    &__socials {
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
+    &__service1 {
+        width: 300px;
+        height: 100px;
         margin-top: 15%;
+       
+       
     }
-
-    &__socials--container {
-        display: flex;
-        gap: 5px
+    &__service2 {
+        width: 300px;
+        height: 100px;
+        margin-left: 23%;
+        margin-top: 5%;
     }
-
-    &__social--tittle {
-        color: #eadfd2;
-        font-family: 'Roboto Condensed', sans-serif;
-
+    &__service3 {
+        width: 300px;
+        height: 100px;
+        margin-top: 5%;
+        margin-bottom: 15%;
     }
-
-    &__social {
-        width: 40px;
-    }
-
-    &__form {
-        display: flex;
-        flex-direction: column;
-    }
-    &__button {
-        font-family: 'Lato', sans-serif;
-        border-style: none;
-        width: 12em;
-        height: 3em;
-        margin-left: 10%;
-        border-radius: 6px;
-        font-weight: 800;
-    }
-
-    &__form--tittle {
-        color: #ddcebc;
-        font: 1.5em 'Roboto Condensed';
-
-    }
-    &__user{
-        display: flex;
-        flex-direction: column;
-        gap:2%;
-    }
-   &__container{
-    display: flex;
-    flex-direction: column;
-   }
-}
-
-input {
-    border-style: none;
-    width: 15em;
-    height: 3em;
-    border-radius: 6px;
-    padding: 0%;
-    background-color: #cebba438;
-    color: #ddcebc;
-    font-family: 'Lato', sans-serif;
-}
-
-input:nth-child(4) {
-    height: 6em;
-}
-
-.button {
-    border: none;
-    width: 40%;
-    margin: auto;
-    background-color: #c19A6b;
-    padding: 5%;
-    border-radius: 20px;
-    box-shadow: 2px 2px 2px #ddcebc;
-}
-
-.message {
-    height: 85px;
 
 }
-
-@include tablet {
-    .menu{
-        display: flex;
-        flex-direction: row;
-        gap:5%;
-        margin-top: 2%;
-        margin-right: 3.5%;
-    }
-    li{
-    list-style:none;
-   }
-   .menuItem{
-     color:#2b1a18;
-     font-family: 'lato';
-     font-size:1.2em;
-     text-decoration: none;
-   }
-    .hamburger{
-        display:none
-    }
-    .home {
-        height: 500px;
-
-        &__intro--welcome {
-            padding-top: 20%;
+    .contact {
+       background-image: url("../images/lawBooks1.jpg");
+       background-size: cover;
+       height: 500px;
+       margin-top: 0%;
+       position: relative;
+    
+      
+        &__form {
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            
+            width: 300px;
+            height: 300px;
+            background-color: $carmelBrown;
+            opacity: .75;
+            padding-top: 10%;
+            border-style:none ;
+            margin-left: 15%;
+            position: absolute;
+            bottom: 20%;
+            left: 4%;
+            
         }
 
-        &__intro--header {
-            padding-top: 0%;
+        &__button {
+            font-family: 'Lato', sans-serif;
+            border-style: none;
+            width: 12em;
+            height: 3em;
+            margin-left: 10%;
+            border-radius: 6px;
+            font-weight: 800;
         }
 
-        &__intro--subheader {
-            padding-top: 5%;
+        &__form--tittle {
+            
+            font: 1.5em 'Roboto Condensed';
+
         }
 
-        &__intro--button {
-            width: 30%;
+        &__user {
+            display: flex;
+            flex-direction: column;
+            gap: 2%;
+            
         }
 
-    }
-
-    .services {
         &__container {
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
+            margin: auto;
+        }
+    }
 
-        }
+    input {
+        
+        border:0;
+        border-bottom:4px solid $textColor ;
+        width: 15em;
+        height: 3em;
+        color: $textColor;
+        padding: 0%;
+        font-family: 'Lato', sans-serif;
+        background-color: transparent;
+        margin: auto;
     }
-    .contact{
-         gap:10%;
-        &__socials{
-            margin-top: 4%;
-        }
-        &__container{
-            flex-direction: row;
-            gap: 2%;
-        }
-      
-    }
-    .button{
-        margin-top: 2%;
-        width: 25%;
-        padding: 2%;
+
+    input:nth-child(4) {
+        height: 6em;
         
     }
-   
-}
+    input::placeholder{
+        color:$textColor;
+    }
 
-@include for-desktop-up{
-    .home {
-        height: 600px;
+    .button {
+        border: none;
+        width: 40%;
+        margin: auto;
+        background-color:$carmelBrown;
+        padding: 5%;
+        color: $textColor;
+       
+       
+        
+    }
 
-        &__intro--welcome {
-            padding-top: 10%;
+    .message {
+        height: 85px;
+        
+
+    }
+    .footer{
+        display: flex;
+        flex-direction: column;
+        background-color: $blackBrown;
+        color: $textColor;
+        text-align: center;
+        padding-top: 10%;
+        padding-bottom: 10%;
+        &__logo{
+            width: 200px;          
         }
 
-        &__intro--header {
-           font-size: 4em;
+        &__title{
+            font-family: 'Merriweather', serif;
+            
+
+            margin-bottom: 10%;
+        }
+        &__socials{
+            margin-bottom: 10%;
+        }
+        &__subheader{
+            font-family: 'Lato', sans-serif;
+        }
+        &__links{
+            font-family: 'Roboto Condensed', sans-serif;
+            margin-top: 2%;
+            color: $carmelBrown;
+
+        }
+       
+
+    }
+
+    @include tablet {
+        .menu {
+            display: flex;
+            flex-direction: row;
+            gap: 5%;
+            margin-top: 2%;
+            margin-right: 3.5%;
         }
 
-        &__intro--subheader {
-            font-size: 1.5em;
-            width: 60%;
+        li {
+            list-style: none;
         }
 
-        &__intro--button {
-            width: 20%;
-            padding:2%;
-            font-size: 1em;
+        .menuItem {
+            color: #2b1a18;
+            font-family: 'lato';
+            font-size: 1.2em;
+            text-decoration: none;
+        }
+
+        .hamburger {
+            display: none
+        }
+
+        .home {
+            height: 500px;
+
+            &__intro--welcome {
+                padding-top: 20%;
+            }
+
+            &__intro--header {
+                padding-top: 0%;
+            }
+
+            &__intro--subheader {
+                padding-top: 5%;
+            }
+
+            &__intro--button {
+                width: 30%;
+            }
+
+        }
+
+        .services {
+            &__container {
+                display: flex;
+                flex-direction: row;
+
+            }
+        }
+
+        .contact {
+            gap: 10%;
+
+            &__socials {
+                margin-top: 4%;
+            }
+
+            &__container {
+                flex-direction: row;
+                gap: 2%;
+            }
+
+        }
+
+        .button {
+            margin-top: 2%;
+            width: 25%;
+            padding: 2%;
+
         }
 
     }
-}
+
+    @include for-desktop-up {
+        .home {
+            height: 600px;
+
+            &__intro--welcome {
+                padding-top: 10%;
+            }
+
+            &__intro--header {
+                font-size: 4em;
+            }
+
+            &__intro--subheader {
+                font-size: 1.5em;
+                width: 60%;
+            }
+
+            &__intro--button {
+                width: 20%;
+                padding: 2%;
+                font-size: 1em;
+            }
+
+        }
+    }
